--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <a href="#contact" class="btn">Hire me ?</a>
         <div class="media-icons">
-          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
           <a href="https://www.instagram.com/saif.x_14?igsh=MW1vMGs5Y25lbGs1MA=="><i class="fab fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/saif-naikwade-11b2a624a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
         </div>
